v/0.16.0/_sources/examples/04_nowcasting/02_stormcast_ensemble_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/04_nowcasting/02_stormcast_ensemble_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_04_nowcasting_02_stormcast_ensemble_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_04_nowcasting_02_stormcast_ensemble_example.py:


Running StormCast Ensemble Inference
====================================

Ensemble StormCast inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
ensemble forecast using StormCast. For details about the stormcast model,
see

 - https://arxiv.org/abs/2408.10958

.. GENERATED FROM PYTHON SOURCE LINES 31-38

.. code-block:: Python

    # /// script
    # dependencies = [
    #   "earth2studio[data,stormcast] @ git+https://github.com/NVIDIA/earth2studio.git@0.16.0",
    #   "cartopy",
    # ]
    # ///








.. GENERATED FROM PYTHON SOURCE LINES 39-44

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic ensemble workflow:
:py:meth:`earth2studio.run.ensemble`.

.. GENERATED FROM PYTHON SOURCE LINES 46-50

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - ensemble start
   :end-before: # sphinx - ensemble end

.. GENERATED FROM PYTHON SOURCE LINES 52-63

Thus, we need the following:

- Prognostic Model: Use the built in StormCast Model :py:class:`earth2studio.models.px.StormCast`.
- perturbation_method: Use the Zero Method :py:class:`earth2studio.perturbation.Zero`. We will not
   perturb the initial data because StormCast has stochastic generation of  ensemble members.
- Datasource: Pull data from the HRRR data api :py:class:`earth2studio.data.HRRR`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

StormCast also requires a conditioning data source. We use a forecast data source here,
ARCO :py:class:`earth2studio.data.ARCO`, but a forecast data source such as GFS_FX
could also be used with appropriate time stamps.

.. GENERATED FROM PYTHON SOURCE LINES 65-100

.. code-block:: Python

    import numpy as np
    from loguru import logger
    from tqdm import tqdm

    logger.remove()
    logger.add(lambda msg: tqdm.write(msg, end=""), colorize=True)

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import ARCO, HRRR
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import StormCast
    from earth2studio.perturbation import Zero

    # Create and set the conditioning data source
    conditioning_data_source = ARCO()

    # Load the default model package which downloads the check point from NGC
    package = StormCast.load_default_package()
    model = StormCast.load_model(package, conditioning_data_source=conditioning_data_source)

    # Instantiate the (Zero) perturbation method
    z = Zero()

    # Create the data source
    data = HRRR()

    # Create the IO handler, store in memory
    io = ZarrBackend()








.. GENERATED FROM PYTHON SOURCE LINES 101-109

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 4 hours

.. GENERATED FROM PYTHON SOURCE LINES 111-132

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 4
    nensemble = 4
    batch_size = 2

    date = "2022-11-04T21:00:00"
    io = run.ensemble(
        [date],
        nsteps,
        nensemble,
        model,
        data,
        io,
        z,
        batch_size=batch_size,
        output_coords={"variable": np.array(["t2m", "refc"])},
    )

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-06-29 17:42:50.307 | INFO     | earth2studio.run:ensemble:400 - Running ensemble inference!
    2026-06-29 17:42:50.307 | INFO     | earth2studio.run:ensemble:407 - Inference device: cuda
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.601 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 113233995-1065344
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.604 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 85717411-2221322
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.606 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 128968781-1071219
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.608 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 70750032-2224001
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.610 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 144136984-1061844
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.612 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 66163006-1064784
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.613 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 55982755-2226204
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.615 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 158633887-1042140
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.617 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 27612133-2229964
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.618 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 185297690-989387
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.620 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 41469037-2228135
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.622 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 210815691-935709
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.624 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 147409055-2156223
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.625 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 273737963-828554
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.627 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 36954032-1147529
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.628 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 13759195-2231917
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.630 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 327527983-852819
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.631 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 156287345-1360622
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.636 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 377553539-821527
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.637 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 183132819-1223801
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.638 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 6769853-1127971
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.639 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 91590172-2451958
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.640 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 174769676-2107905
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.642 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 272899230-838733
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.643 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 20625909-1106011
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.644 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 9291302-1136339
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.645 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 38101561-1112473
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.646 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 326696508-831475
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.647 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 34509703-1096207
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.648 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 97594444-1053062
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.649 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 49029775-1084487
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.650 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 67227790-1067111
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.651 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 63743189-1076580
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.653 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 271641270-1257960
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.653 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 78737454-1073805
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.654 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 52544280-1090181
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.655 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 112200557-1033438
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.655 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 94042130-1071561
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.656 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 23094986-1158294
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.657 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 208847160-1061355
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.657 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 109638766-1063629
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.658 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 138196216-2483649
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.659 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 125408221-1046332
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.659 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfsfcf00.grib2 26658825-637820
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.660 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 82231093-1051859
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.661 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 140679865-1017377
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.661 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 325121285-1575223
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.662 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 155299266-988079
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.663 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 127936406-1032375
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.663 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 373523984-1454073
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.664 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 209908515-907176
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.665 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 182184021-948798
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.665 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 4489181-2280672
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.666 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 207926438-920722
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.667 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 184356620-941070
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.667 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 24253280-1129901
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.668 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfsfcf00.grib2 0-448058
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.668 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 270819986-821284
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.669 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 61334638-2408551
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.670 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 324440554-680731
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.670 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 51440225-1104055
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.671 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 46644493-2385282
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.672 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 7897824-1393478
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.672 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfsfcf00.grib2 38185540-1172707
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.673 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 21731920-1363066
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.674 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 375618942-1101032
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.674 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 35605910-1348122
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.675 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 152813467-2485799
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.676 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 50114262-1325963
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.676 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 179710999-2473022
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.677 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 64819769-1343237
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.678 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 122930506-2477715
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.678 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 374978057-640885
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.679 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 268628273-2191713
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.679 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 79811259-1389376
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.680 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 10427641-1136665
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.681 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 81200635-1030458
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.681 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 95113691-1458220
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.682 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 76303760-2433694
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.683 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 110702395-1498162
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.683 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 18260220-2365689
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.684 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 126454553-1481853
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.685 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 157647967-985920
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.685 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 32136730-2372973
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.686 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 96571911-1022533
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.687 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 141697242-1428027
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.687 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 0-2231725
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.688 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 143125269-1011715
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.688 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 376719974-833565
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.689 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 322588408-1852146
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.690 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 205490191-2436247
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.690 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 132393030-2187238
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.691 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 264613752-2200924
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.692 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfsfcf00.grib2 47584002-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.692 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 107171888-2466878
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.693 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfsfcf00.grib2 45202387-2381615
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.694 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 116871633-2212091
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.694 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 200679562-2278041
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]                                                              2026-06-29 17:42:51.695 | DEBUG    | earth2studio.data.hrrr:fetch_array:484 - Fetching HRRR grib file: noaa-hrrr-bdp-pds/hrrr.20221104/conus/hrrr.t21z.wrfnatf00.grib2 101085038-2218218
    Fetching HRRR data:   0%|          | 0/99 [00:00<?, ?it/s]    Fetching HRRR data:   1%|          | 1/99 [00:00<01:08,  1.43it/s]    Fetching HRRR data:   3%|▎         | 3/99 [00:00<00:27,  3.48it/s]    Fetching HRRR data:   8%|▊         | 8/99 [00:01<00:09,  9.80it/s]    Fetching HRRR data:  11%|█         | 11/99 [00:01<00:06, 12.82it/s]    Fetching HRRR data:  15%|█▌        | 15/99 [00:01<00:04, 17.06it/s]    Fetching HRRR data:  18%|█▊        | 18/99 [00:01<00:04, 17.96it/s]    Fetching HRRR data:  22%|██▏       | 22/99 [00:01<00:03, 21.37it/s]    Fetching HRRR data:  25%|██▌       | 25/99 [00:01<00:03, 23.04it/s]    Fetching HRRR data:  30%|███       | 30/99 [00:01<00:02, 28.59it/s]    Fetching HRRR data:  34%|███▍      | 34/99 [00:01<00:02, 30.77it/s]    Fetching HRRR data:  38%|███▊      | 38/99 [00:02<00:02, 30.30it/s]    Fetching HRRR data:  42%|████▏     | 42/99 [00:02<00:01, 31.67it/s]    Fetching HRRR data:  47%|████▋     | 47/99 [00:02<00:01, 31.92it/s]    Fetching HRRR data:  54%|█████▎    | 53/99 [00:02<00:01, 36.70it/s]    Fetching HRRR data:  59%|█████▊    | 58/99 [00:02<00:01, 33.41it/s]    Fetching HRRR data:  64%|██████▎   | 63/99 [00:02<00:00, 36.53it/s]    Fetching HRRR data:  68%|██████▊   | 67/99 [00:02<00:00, 32.81it/s]    Fetching HRRR data:  72%|███████▏  | 71/99 [00:03<00:00, 30.13it/s]    Fetching HRRR data:  77%|███████▋  | 76/99 [00:03<00:00, 34.54it/s]    Fetching HRRR data:  81%|████████  | 80/99 [00:03<00:00, 28.97it/s]    Fetching HRRR data:  87%|████████▋ | 86/99 [00:03<00:00, 31.56it/s]    Fetching HRRR data:  91%|█████████ | 90/99 [00:03<00:00, 32.03it/s]    Fetching HRRR data:  96%|█████████▌| 95/99 [00:03<00:00, 34.41it/s]    Fetching HRRR data: 100%|██████████| 99/99 [00:04<00:00, 11.92it/s]    Fetching HRRR data: 100%|██████████| 99/99 [00:04<00:00, 20.76it/s]
    2026-06-29 17:42:56.705 | SUCCESS  | earth2studio.run:ensemble:428 - Fetched data from HRRR
    2026-06-29 17:42:56.714 | INFO     | earth2studio.run:ensemble:472 - Starting 4 Member Ensemble Inference with             2 number of batches.


    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/5 [00:00<?, ?it/s]
                                                                    

                                                                 2026-06-29 17:42:56.767 | DEBUG    | earth2studio.data.arco:_async_init:128 - Using Multi-Storage Client for ARCO data access

    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:00, 19.32it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.456 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:02,  1.35it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.482 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/v_component_of_wind/1076829.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.30it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.506 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/u_component_of_wind/1076829.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.26it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.538 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/specific_humidity/1076829.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.22it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.557 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1076829.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.19it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.660 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.06it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.667 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.05it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.670 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/mean_sea_level_pressure/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.05it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.676 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/surface_pressure/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.04it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.678 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1076829.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.04it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:42:57.690 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1076829.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  20%|██        | 1/5 [00:00<00:03,  1.03it/s]

    Total Ensemble Batches:   0%|          | 0/2 [00:00<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:05,  1.71it/s]    Fetching ARCO data:  18%|█▊        | 2/11 [00:00<00:03,  2.97it/s]    Fetching ARCO data:  45%|████▌     | 5/11 [00:01<00:00,  6.41it/s]    Fetching ARCO data:  55%|█████▍    | 6/11 [00:01<00:00,  5.74it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:02<00:01,  2.15it/s]    Fetching ARCO data:  73%|███████▎  | 8/11 [00:03<00:01,  2.01it/s]    Fetching ARCO data:  82%|████████▏ | 9/11 [00:03<00:00,  2.49it/s]    Fetching ARCO data:  91%|█████████ | 10/11 [00:03<00:00,  2.99it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:03<00:00,  2.55it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:03<00:00,  2.79it/s]

    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.320 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/surface_pressure/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.322 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.328 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/mean_sea_level_pressure/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.332 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1076830.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.334 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/u_component_of_wind/1076830.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.337 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.339 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.343 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/specific_humidity/1076830.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.373 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1076830.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.379 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1076830.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:13.382 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/v_component_of_wind/1076830.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  40%|████      | 2/5 [00:16<00:24,  8.27s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:16<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:03,  3.14it/s]    Fetching ARCO data:  27%|██▋       | 3/11 [00:00<00:01,  6.54it/s]    Fetching ARCO data:  45%|████▌     | 5/11 [00:00<00:00,  8.26it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:02<00:01,  2.39it/s]    Fetching ARCO data:  73%|███████▎  | 8/11 [00:02<00:01,  2.13it/s]    Fetching ARCO data:  82%|████████▏ | 9/11 [00:03<00:01,  1.97it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:03<00:00,  3.01it/s]

    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.877 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/specific_humidity/1076831.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.885 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.887 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/v_component_of_wind/1076831.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.888 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/surface_pressure/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.890 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/mean_sea_level_pressure/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.895 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1076831.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.896 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.897 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.929 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1076831.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.938 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1076831.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:28.941 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/u_component_of_wind/1076831.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  60%|██████    | 3/5 [00:32<00:22, 11.31s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:32<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:03,  2.59it/s]    Fetching ARCO data:  36%|███▋      | 4/11 [00:00<00:00,  8.46it/s]    Fetching ARCO data:  55%|█████▍    | 6/11 [00:00<00:00,  7.42it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:02<00:02,  1.95it/s]    Fetching ARCO data:  73%|███████▎  | 8/11 [00:03<00:01,  1.99it/s]    Fetching ARCO data:  91%|█████████ | 10/11 [00:03<00:00,  2.28it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:04<00:00,  2.50it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:04<00:00,  2.72it/s]

    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.839 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.844 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/specific_humidity/1076832.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.849 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/surface_pressure/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.851 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/mean_sea_level_pressure/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.855 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.856 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.859 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1076832.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.862 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/v_component_of_wind/1076832.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.890 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/u_component_of_wind/1076832.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.898 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1076832.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]                                                          
                                                                            

                                                                 2026-06-29 17:43:44.901 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1076832.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:  80%|████████  | 4/5 [00:48<00:13, 13.04s/it]

    Total Ensemble Batches:   0%|          | 0/2 [00:48<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:03,  3.28it/s]    Fetching ARCO data:  27%|██▋       | 3/11 [00:00<00:01,  6.34it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:03<00:01,  2.01it/s]    Fetching ARCO data:  82%|████████▏ | 9/11 [00:03<00:00,  2.74it/s]    Fetching ARCO data:  91%|█████████ | 10/11 [00:03<00:00,  2.63it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:03<00:00,  2.91it/s]

    Running batch 0 inference: 100%|██████████| 5/5 [01:03<00:00, 13.97s/it]
                                                                            

    Total Ensemble Batches:  50%|█████     | 1/2 [01:03<01:03, 63.77s/it]
    Running batch 2 inference:   0%|          | 0/5 [00:00<?, ?it/s]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:02,  3.67it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:00<00:00, 14.04it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:00<00:00, 19.04it/s]

    Running batch 2 inference:  40%|████      | 2/5 [00:12<00:18,  6.28s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:02,  3.74it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:00<00:00, 14.06it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:00<00:00, 19.07it/s]

    Running batch 2 inference:  60%|██████    | 3/5 [00:25<00:17,  8.88s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:02,  3.72it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:00<00:00, 14.06it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:00<00:00, 19.11it/s]

    Running batch 2 inference:  80%|████████  | 4/5 [00:37<00:10, 10.22s/it]    Fetching ARCO data:   0%|          | 0/11 [00:00<?, ?it/s]    Fetching ARCO data:   9%|▉         | 1/11 [00:00<00:02,  3.69it/s]    Fetching ARCO data:  64%|██████▎   | 7/11 [00:00<00:00, 14.01it/s]    Fetching ARCO data: 100%|██████████| 11/11 [00:00<00:00, 19.02it/s]

    Running batch 2 inference: 100%|██████████| 5/5 [00:50<00:00, 11.01s/it]
                                                                            

    Total Ensemble Batches: 100%|██████████| 2/2 [01:53<00:00, 55.69s/it]    Total Ensemble Batches: 100%|██████████| 2/2 [01:53<00:00, 56.90s/it]
    2026-06-29 17:44:50.520 | SUCCESS  | earth2studio.run:ensemble:544 - 
    Inference complete
    /
    ├── ensemble (4,) int64
    ├── hrrr_x (640,) float64
    ├── hrrr_y (512,) float64
    ├── lead_time (5,) timedelta64
    ├── refc (4, 1, 5, 512, 640) float32
    ├── t2m (4, 1, 5, 512, 640) float32
    └── time (1,) datetime64





.. GENERATED FROM PYTHON SOURCE LINES 133-139

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Start with plotting the reflectivity.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 141-222

.. code-block:: Python

    import cartopy
    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = f"{date}"
    step = nsteps  # 4 hours, since lead_time = 1 hr

    # Create a correct Lambert Conformal projection
    projection = ccrs.LambertConformal(
        central_longitude=262.5,
        central_latitude=38.5,
        standard_parallels=(38.5, 38.5),
        globe=ccrs.Globe(semimajor_axis=6371229, semiminor_axis=6371229),
    )


    # Get the lat lon arrays from the model
    def plot_(axi, data, title, cmap, vmin=None, vmax=None):
        """Convenience function for plotting pcolormesh."""
        # Plot the field using pcolormesh
        im = axi.pcolormesh(
            model.lon,
            model.lat,
            data,
            transform=ccrs.PlateCarree(),
            cmap=cmap,
            vmin=vmin,
            vmax=vmax,
        )
        plt.colorbar(im, ax=axi, shrink=0.6, pad=0.04)
        # Set title
        axi.set_title(title)

        # Add coastlines and gridlines
        axi.coastlines()
        axi.gridlines()

        # Set state lines
        axi.add_feature(
            cartopy.feature.STATES.with_scale("50m"),
            linewidth=0.5,
            edgecolor="black",
            zorder=2,
        )


    # Plot refc
    variable = "refc"
    cmap = "gist_ncar"
    x = io[variable]

    plt.close("all")
    fig, (ax1, ax2, ax3) = plt.subplots(
        nrows=1, ncols=3, subplot_kw={"projection": projection}, figsize=(20, 6)
    )
    plot_(
        ax1,
        np.where(x[0, 0, step] > 0, x[0, 0, step], np.nan),
        f"{forecast} - Lead time: {step}hrs - Member: {0}",
        cmap,
        vmin=0,
        vmax=60,
    )
    plot_(
        ax2,
        np.where(x[1, 0, step] > 0, x[1, 0, step], np.nan),
        f"{forecast} - Lead time: {step}hrs - Member: {1}",
        cmap,
        vmin=0,
        vmax=60,
    )
    plot_(
        ax3,
        np.where(x[:, 0, step].mean(axis=0) > 0, x[:, 0, step].std(axis=0), np.nan),
        f"{forecast} - Lead time: {step}hrs - Std",
        cmap,
        vmin=0,
        vmax=60,
    )
    plt.savefig(f"outputs/10_{date}_{variable}_{step}_ensemble.jpg")




.. image-sg:: /examples/04_nowcasting/images/sphx_glr_02_stormcast_ensemble_example_001.png
   :alt: 2022-11-04T21:00:00 - Lead time: 4hrs - Member: 0, 2022-11-04T21:00:00 - Lead time: 4hrs - Member: 1, 2022-11-04T21:00:00 - Lead time: 4hrs - Std
   :srcset: /examples/04_nowcasting/images/sphx_glr_02_stormcast_ensemble_example_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 223-224

Lets also plot the surface temperature field.

.. GENERATED FROM PYTHON SOURCE LINES 226-227

Plot 2-meter temperature

.. GENERATED FROM PYTHON SOURCE LINES 227-254

.. code-block:: Python

    variable = "t2m"
    cmap = "Spectral_r"
    x = io[variable]

    plt.close("all")
    fig, (ax1, ax2, ax3) = plt.subplots(
        nrows=1, ncols=3, subplot_kw={"projection": projection}, figsize=(20, 6)
    )
    plot_(
        ax1,
        x[0, 0, step],
        f"{forecast} - Lead time: {step}hrs - Member: {0}",
        cmap,
    )
    plot_(
        ax2,
        io[variable][1, 0, step],
        f"{forecast} - Lead time: {step}hrs - Member: {1}",
        cmap,
    )
    plot_(
        ax3,
        x[:, 0, step].std(axis=0),
        f"{forecast} - Lead time: {step}hrs - Std",
        cmap,
    )
    plt.savefig(f"outputs/10_{date}_{variable}_{step}_ensemble.jpg")



.. image-sg:: /examples/04_nowcasting/images/sphx_glr_02_stormcast_ensemble_example_002.png
   :alt: 2022-11-04T21:00:00 - Lead time: 4hrs - Member: 0, 2022-11-04T21:00:00 - Lead time: 4hrs - Member: 1, 2022-11-04T21:00:00 - Lead time: 4hrs - Std
   :srcset: /examples/04_nowcasting/images/sphx_glr_02_stormcast_ensemble_example_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 7.406 seconds)


.. _sphx_glr_download_examples_04_nowcasting_02_stormcast_ensemble_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_stormcast_ensemble_example.ipynb <02_stormcast_ensemble_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_stormcast_ensemble_example.py <02_stormcast_ensemble_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 02_stormcast_ensemble_example.zip <02_stormcast_ensemble_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
